--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 									<input className="form-control" type="text" placeholder="Name" />
 								</div>
 								<div className="form-group">
-									<textarea className="form-control" placeholder="message"></textarea>
+									<textarea className="form-control" placeholder="Message"></textarea>
 								</div>
 								<div className="form-group">
 									<FileInput className="form-control" placeholder="Attachment" onChange={this.handleChange.bind(this)}/>
